accomplish MVP, dayOfWeek shows!
Co-authored-by: Marni Sucher <suchermarni@gmail.com>

--- a/src/index.html
+++ b/src/index.html
@@ -39,7 +39,7 @@
   </div>
 
   <div id="result">
-    <p>Day of the week: <span></span></p>
+    <p>Day of the week: <span id="day"></span></p>
   </div>
 
 
