add prepending, writeMonth func
Co-authored-by: Marni Sucher <suchermarni@gmail.com>

--- a/src/index.html
+++ b/src/index.html
@@ -8,6 +8,7 @@
 <body>
   <div class = "jumbotron">
     <h1>Find day of the week!</h1>
+    <h3>After choosing a year and month, hit the submit button. Select the day, and submit again to determine the weekday!</h3>
   </div>
   <div class="container">
     <form id = "date">
@@ -39,10 +40,11 @@
   </div>
 
   <div id="result">
-    <p>Day of the week: <span id="day"></span></p>
+    <h4>Days of the week, as requested:</h4>
+    <div class="history-days">
+
+    </div>
   </div>
-
-
-  
+  <button class="clear-history"></button>
 </body>
 </html>
